Actionbar: Fixes #51 - Click events not working in tab overflow
Fixes #51
Adds overlay over page when tab menu is open
Fixes actionbar box shadow appearing on tab overflow
Fixes images appearing too large in tab button when clicked from the tab overflow menu
Fixes white artifacts appearing in tab menu
Added -blackberry-touch to overflow menus

--- a/src/plugins/overflowMenu/jquery.mobile.overflowMenu.css
+++ b/src/plugins/overflowMenu/jquery.mobile.overflowMenu.css
@@ -10,14 +10,15 @@
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and 
+* See the License for the specific language governing permissions and
 * limitations under the License.
 */
+
 
 .overflowMenu {
 	height: 100%;
 	width: 563px;
-	border-image: url('images_bb/core_crosscutmenu_bg.png') 1 1 1 15 fill / 0 0 0 0 repeat;
+	background-color: #121212;
 	-webkit-box-shadow: -10px 0px 25px #121212;
 	-webkit-transition-duration: 0.25s;
 	-webkit-animation-timing-function: ease-out;
@@ -32,6 +33,7 @@
 	-webkit-box-pack: center;
 	z-index: 10001;
 	-webkit-transform: translate3d(0,0,0);
+	-webkit-overflow-scrolling: -blackberry-touch;
 }
 .left {
 	right: auto;
@@ -85,12 +87,27 @@
 	max-height: 81px;
 	max-width: 81px;
 }
-
 .menuItem:active {
 	background: url('images_bb/core_crosscutmenu_selected.png') no-repeat left center;
 }
-
 .menuImage {
 	width: 81px;
 	height: 81px;
+}
+
+.ui-overflow-overlay {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 10000;
+	background-color: black;
+	opacity: 0;
+	display: none;
+}
+
+.showTabOverflow .ui-overflow-overlay {
+	opacity: .3;
+	display: block;
 }
